Add endpoint to clear console log
